<!--
  ~ Copyright (c) 2020. Code Written and tested by Ahmed Emad.
  -->

<resources>
    <string name="app_name" translatable="false">Koshkie</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="tut">TUT</string>
    <string name="search_items">Search items..</string>
    <string name="cart">Cart(0)</string>
    <string name="menu">MENU</string>
    <string name="food">Food</string>
    <string name="grocieries">Groceries</string>
    <string name="medicines">Medicines</string>
    <string name="title_activity_orders">Orders</string>
    <string name="title_activity_offers">Offers</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_contact_us">Contact us</string>
    <string name="title_activity_terms">Terms and Policies</string>
    <string name="sort_by">Sort by</string>
    <string name="items">\t items</string>
    <string name="vendors">\t vendors</string>
    <string name="title_activity_cart">Shopping Cart</string>
    <string name="get_started">Get Started</string>
    <string name="tutorial1_title">Add items to your Cart</string>
    <string name="tutorial1_des">You can browse hundreds of Restaurants, Supermarkets and Pharmacies , Add items you want to your Cart , modify them or add special notes to the vendor.</string>
    <string name="tutorial2_title">Place Your Order</string>
    <string name="tutorial2_des">Your order will be delivered to your location in minutes , you can track the order , send special notes to the driver and report if there are any problems.</string>
    <string name="tutorial3_title">Enjoy!</string>
    <string name="tutorial3_des">You can leave a review to us and collect coupons to use with your next order.</string>
    <string name="lang">en</string>
    <string name="choose_language">Choose a Language</string>
    <string name="no_gps">Can\'t get GPS location info, please allow gps permissions from setting.</string>
    <string name="picture_of_a_shop_brand">Picture of a shop brand</string>
    <string name="no_internet">There is no internet connection, Please make sure that your device is connected</string>
    <string name="no_food">There are no available restaurants currently in your area</string>
    <string name="no_grocieries">There are no available grocieries shops currently in your area</string>
    <string name="no_medicines">There are no available pharmacies currently in your area</string>
    <string name="time_to_prepare">mins</string>
    <string name="minCharge">Min.:</string>
    <string name="delivery">Delivery:</string>
    <string name="has_offers">Special offers on menu items</string>
</resources>
