<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020. Code Written and tested by Ahmed Emad.
  -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="7dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/shopCover"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:contentDescription="@string/picture_of_a_shop_brand"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/shopPhoto"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/picture_of_a_shop_brand"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shopCover"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/shopName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/shopPhoto"
            app:layout_constraintTop_toTopOf="@id/shopPhoto" />

        <RatingBar
            android:id="@+id/shopRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="59dp"
            android:layout_marginTop="50dp"
            android:isIndicator="true"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:theme="@style/RatingBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shopCover" />

        <TextView
            android:id="@+id/shopRatingCount"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="242dp"
            android:layout_marginTop="8dp"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/shopRating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/shopRating"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/shopTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="@+id/shopName"
            app:layout_constraintTop_toBottomOf="@+id/shopName"
            tools:ignore="SpUsage"
            tools:text="pizza" />

        <TextView
            android:id="@+id/shopTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingBottom="15dp"
            android:textSize="13dp"
            app:layout_constraintStart_toStartOf="@id/shopName"
            app:layout_constraintTop_toBottomOf="@+id/shopTags"
            tools:ignore="SpUsage"
            tools:text="2354" />

        <TextView
            android:id="@+id/shopTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:paddingBottom="15dp"
            android:text="@string/time_to_prepare"
            android:textSize="13dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shopTime"
            app:layout_constraintStart_toEndOf="@+id/shopTime"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/shopMinCharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:paddingBottom="15dp"
            android:textSize="13dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shopMinChargeLabel"
            app:layout_constraintStart_toEndOf="@id/shopMinChargeLabel"
            tools:ignore="SpUsage"
            tools:text="32" />

        <TextView
            android:id="@+id/shopMinChargeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingBottom="15dp"
            android:text="@string/minCharge"
            android:textSize="13dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shopDeliveryFee"
            app:layout_constraintStart_toEndOf="@+id/shopDeliveryFee"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/shopDeliveryFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:paddingBottom="15dp"
            android:textSize="13dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shopDeliveryFeeLabel"
            app:layout_constraintStart_toEndOf="@id/shopDeliveryFeeLabel"
            tools:ignore="SpUsage"
            tools:text="897" />

        <TextView
            android:id="@+id/shopDeliveryFeeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingBottom="15dp"
            android:text="@string/delivery"
            android:textSize="13dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shopTimeLabel"
            app:layout_constraintStart_toEndOf="@+id/shopTimeLabel"
            tools:ignore="SpUsage" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="#F8F8F8"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shopTimeLabel" />

        <TextView
            android:id="@+id/hasOffers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/has_offers"
            android:textColor="#FF5A5A"
            android:textSize="15sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
