<!--
  ~ Copyright (c) 2019. Code Written and tested by Ahmed Emad.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:background="@android:color/transparent">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/menu"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="normal|bold"
        app:fontFamily="@font/advent_pro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,SpUsage" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_layout"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/search"
        android:onClick="onActionBarItemSelected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded,UnusedAttribute">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:foregroundGravity="center"
            android:hint="@string/search_items"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#E6FFFFFF"
            android:textCursorDrawable="@null"
            android:textSize="15dp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,RtlSymmetry,SpUsage" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginEnd="8dp"
            android:foregroundGravity="center"
            android:src="@drawable/searchicon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cart_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onActionBarItemSelected"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:foregroundGravity="center"
            android:text="@string/cart"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            app:fontFamily="@font/abel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/cart"
            app:layout_constraintStart_toEndOf="@id/cart"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/navButton"
        android:layout_width="20dp"
        android:layout_height="35dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:onClick="onActionBarItemSelected"
        android:scaleType="centerCrop"
        android:src="@drawable/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <ImageButton
        android:id="@+id/popup"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:onClick="onActionBarItemSelected"
        android:scaleType="centerInside"
        android:src="@drawable/menu_popup"
        app:layout_constraintBottom_toBottomOf="@+id/search_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_layout"
        app:layout_constraintTop_toTopOf="@+id/search_layout"
        tools:ignore="ContentDescription,RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>